# zero-of-one

./: .gitignore  CMakeLists.txt  README.md  dub.json
cmdline/: dub.json
cmdline/source/: app.d
doc/: protocol.txt
ircbot/: dub.json
ircbot/source/: app.d
src/: CMakeLists.txt  app.d  main.c  pervasive.d  pervasive.h
src/cli/: cli.h  parameters.c  parameters.h  parameters_types.h
src/core/: CMakeLists.txt  assimilate.c  assimilate.d  char.c  char.h  char_types.h  create_sentences.c  create_sentences.d  create_sequence.c  index.c  index.h  index_types.h  knowledge.c  knowledge.d  knowledge.h  knowledge_finalize.c  knowledge_search.c  knowledge_types.d  knowledge_types.h  main.c  sequence.c  sequence.d  sequence.h  sequence_creation.c  sequence_from_string.c  sequence_to_string.c  sequence_types.h  state_types.d  state_types.h
src/error/: error.h
src/file/: data_input.c  data_output.c  data_output.h
src/io/: CMakeLists.txt  data_input.d  data_input.h  data_input_types.d  data_input_types.h  data_output.c  data_output.d  error.d  error.h  network.c  network.d  network.h  network_types.d  network_types.h  parameters.c  parameters.d  parameters.h  parameters_types.d  parameters_types.h
src/irc/: network.c  network.h  network_types.h
src/knowledge/: CMakeLists.txt  knowledge.c  knowledge.h  knowledge_finalize.c  knowledge_get_random_sequence.c  knowledge_get_random_target.c  knowledge_learn_markov_sequence.c  knowledge_learn_sequence.c  knowledge_learn_word.c  knowledge_search.c  knowledge_swt_tws_modifications.c  knowledge_types.h
src/parameters/: parameters.c  parameters.h  parameters_types.h
src/pipe/: CMakeLists.txt  pipe.h  pipe_types.h
src/sequence/: sequence.c  sequence.h  sequence_append.c  sequence_creation.c  sequence_from_string.c  sequence_to_string.c
src/server/: CMakeLists.txt  server.c  server.h  server_add_server_worker.c  server_create_socket.c  server_finalize.c  server_initialize.c  server_joining_threads.c  server_new_connection.c  server_signal.c  server_types.h  server_wait_for_event.c  server_worker.c  (+5 more)
(+21 files in other folders)
